@@ -39,4 +39,5 @@ CONFIG_DRIVER_NOR=y
 CONFIG_ENV_REGION_KERNEL=nor:256k#1536k
 CONFIG_ENV_REGION=nor:128k#64k
 
-CONFIG_CLCDC=y
+# The CLCDC test will crash the lh7a404
+#CONFIG_CLCDC=y
