@@ -1,3 +1,10 @@
+2005-01-13  Marc Singer  <elf@buici.com>
+
+	* src/mach-lh7952x/Makefile (obj-$(CONFIG_MACH_LPD79524)): Moved
+	adc to 79524 specific build.
+
+	* scripts/configtoh: Fixed the script to properly elide comments. 
+
 2005-01-12  Marc Singer  <elf@buici.com>
 
 	* README_config: Editing the documentation.
